<resources>
    <string name="app_name">AppBazaar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_form1">Form1Activity</string>



    <string name="mobile_number_hint">Mobile Number</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!--Setting for main screen-->
    <string name="navWelcomeMessage">Welcome</string>

    <!--For navigation drawer-->
    <string name="navPersonal">Personal</string>
    <string name="navOthers">Others</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_aboutus">About Us</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_transaction">Transaction</string>




</resources>
